# character_arc

./: .gitignore  Cargo.toml  README.md  TODO.md  flake.nix
src/: example_game.rs  macros.rs  main.rs  mip_story_builder.rs  model.rs  rl_story_builder.rs
src/example_game/: girigoth.rs  rattlebug.rs  strange_book.rs
src/mip_story_builder/: constraints.rs  mip_model.rs  mip_utils.rs
src/mip_story_builder/constraints/: branching.rs  reachability.rs  transitions.rs
