[package]
name = "character_arc"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.12.1"
petgraph = "^0.6.4"
strum = "0.26.1"
ndarray = { version = "0.15.0", features = ["blas"] }
layout-rs = "0.1.2"
rsrl = "0.8"
rand = "0.7"

# blas-src = { version = "0.8", default-features = false, features = ["openblas"] }
# openblas-src = { version = "0.10", default-features = false, features = ["cblas", "system"] }


